<resources>
    <string name="app_name">imarticus class 01</string>
    <string name="enter_pin_hint">Enter Pin</string>
    <string name="enter_name_hint">Enter Name</string>
    <string name="Cancel_buttontext">Cancel</string>
    <string name="sign_up_buttontext">Sign Up</string>
    <string name="log_in_page_headinng">SIGN UP PAGE</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="enter_age_hint">Age</string>
    <string name="checkbox1">Reading</string>
    <string name="checkbox2">Sports</string>
    <string name="checkbox3">Music</string>
    <string name="checkbox4">Gaming</string>
    <string name="hobbies">Hobbies</string>
    <string name="user_details">user details</string>
    <string name="name">Name</string>
    <string name="hip">-</string>
    <string name="textview">TextView</string>
    <string name="pin">PIN</string>
    <string name="_24555">24555</string>
    <string name="genderv">GENDER</string>
</resources>